Dropdown issues on mobile

--- a/src/assets/styles/qpm-style.css
+++ b/src/assets/styles/qpm-style.css
@@ -2275,66 +2275,6 @@ input:checked + .qpm_slider:before {
     clear: both;
   }
 }
-/* .qpm_switch {
-	position: relative;
-	display: inline-block;
-	width: 60px;
-	height: 34px;
-  }
-  
-  .qpm_switch input { 
-	opacity: 0;
-	width: 0;
-	height: 0;
-  }
-  
-  .qpm_slider {
-	position: absolute;
-	cursor: pointer;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: #ccc;
-	-webkit-transition: .4s;
-	transition: .4s;
-  }
-  
-  .qpm_slider:before {
-	position: absolute;
-	content: "";
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
-	background-color: var(--color-white);
-	-webkit-transition: .4s;
-	transition: .4s;
-  }
-  
-  input:checked + .qpm_slider {
-	background-color: #2196F3;
-  }
-  
-  input:focus + .qpm_slider {
-	box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .qpm_slider:before {
-	-webkit-transform: translateX(26px);
-	-ms-transform: translateX(26px);
-	transform: translateX(26px);
-  } */
-
-/* Rounded sliders */
-/*  .qpm_slider.qpm_round {
-	border-radius: 34px;
-  }
-  
-  .qpm_slider.qpm_round:before {
-	border-radius: 50%;
-  } 
-*/
 
 .qpm_answer-text {
   word-wrap: break-word; /* Break long words */
